# embeddrix

./: LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
embeddrix/: __main__.py  app.py  embedding_worker.py
